polpack: Include polpack reference and funding bodies

--- a/applications/polpack/sun223.tex
+++ b/applications/polpack/sun223.tex
@@ -1852,6 +1852,16 @@ estimates of the required quantities.
 
 \end{description}
 
+\section{Acknowledging this Software}
+If you use this software in published work, then please cite paper
+\url{http://adsabs.harvard.edu/abs/2005ASPC..343...71B}.
+
+The initial developement of POLPACK was funded by the Central Laboratory of the
+Research Councils in the United Kindom. Subsequent maintainance and
+development has been funded by the the Science and Technology
+Facilities Council in the United Kindgom, and by the East Asian
+Observatory.
+
 \newpage
 \appendix
 \section{ \label{APP:DESCRIPTION}Description of the POLPACK applications}
