polpack: Mention ASCL entry

--- a/applications/polpack/sun223.tex
+++ b/applications/polpack/sun223.tex
@@ -1862,6 +1862,9 @@ development has been funded by the the Science and Technology
 Facilities Council in the United Kindgom, and by the East Asian
 Observatory.
 
+POLPACK is registered with the Astrophysics Source Code Library as entry
+\htmladdnormallinkfoot{ascl:1405.014}{http://ascl.net/1405.014}.
+
 \newpage
 \appendix
 \section{ \label{APP:DESCRIPTION}Description of the POLPACK applications}
