polpack: Correct figure placement in sun223

--- a/applications/polpack/sun223.tex
+++ b/applications/polpack/sun223.tex
@@ -5572,7 +5572,7 @@ representation.
 
 \end{enumerate}
 
-\newpage
+\clearpage
 
 \section{\label{APP:SNGBM}\xlabel{CalculationofStokesVectorsinSingle-beamMode}
 Calculation of Stokes Vectors in Single-beam Mode}
@@ -5690,7 +5690,7 @@ Figure~\ref{fig:varest}:
 
   \begin{figure}[htbp]
   \begin{center}
-  \includegraphics[clip,width=0.95\textwidth]{sun223_figures/varest}
+  \includegraphics[clip,width=0.8\textwidth]{sun223_figures/varest}
   \caption[The estimation of input variances.]{The estimation of input variances. The observed and expected
            intensity images are combined to form a single variance image.}
   \label{fig:varest}
